performance: netty
- redo context selector on multiple apps
- nettystring fix hashcode implementation
- get back previous leak detector (OFF)
- rocker/fortunes tests remove composite buffer
- ref #3770